--- a/html/options.html
+++ b/html/options.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Options</title>
-    <link rel="stylesheet" href="../css/optionsPage/darkOptions.css" />
-    <link id="lightModeStylesheet" rel="stylesheet" href="../css/optionsPage/lightOptions.css" disabled />
+    <link rel="stylesheet" href="../css/options.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
@@ -31,6 +30,8 @@
               <label for="light">Light</label>
               <input type="radio" name="theme" id="dark" />
               <label for="dark">Dark</label>
+              <input type="radio" name="theme" id="auto" />
+              <label for="auto">Auto</label>
             </div>
           </label>
 
