--- a/html/popupOptions.html
+++ b/html/popupOptions.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Options</title>
-    <link rel="stylesheet" href="../css/optionsPage/darkPopupOptions.css" />
-    <link id="lightModeStylesheet" rel="stylesheet" href="../css/optionsPage/lightOptions.css" disabled />
+    <link rel="stylesheet" href="../css/options.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
@@ -31,6 +31,8 @@
               <label for="light">Light</label>
               <input type="radio" name="theme" id="dark" />
               <label for="dark">Dark</label>
+              <input type="radio" name="theme" id="auto" />
+              <label for="auto">Auto</label>
             </div>
           </label>
 
@@ -309,5 +311,6 @@
     </div>
 
     <script src="../js/options.js"></script>
+	<script src="../js/theme.js"></script>
   </body>
 </html>
