--- a/html/options.html
+++ b/html/options.html
@@ -3,6 +3,7 @@
   <head>
     <title>Options</title>
     <link rel="stylesheet" href="../css/options.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
@@ -119,7 +120,7 @@
           </label>
 
           <label>
-            Show time
+            Show time/clock
             <label class="switch">
               <input type="checkbox" id="timeBtn" />
               <span class="slider"></span>
@@ -311,5 +312,6 @@
     </div>
 
     <script src="../js/options.js"></script>
+	<script src="../js/theme.js"></script>
   </body>
 </html>
