--- a/html/options.html
+++ b/html/options.html
@@ -311,6 +311,7 @@
       </div>
     </div>
 
+    <script src="../js/browser-polyfill.js"></script>
     <script src="../js/options.js"></script>
 	<script src="../js/theme.js"></script>
   </body>
